# forex-arbitrage

./: Cargo.toml
doc/: README.md
docs/: README.md
src/: acquisition.rs  graph.rs  main.rs
