[package]
name = "forex-arbitrage"
version = "0.2.0"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde_json = "1.0"
serde = "1.0"
failure = "0.1"
futures = "0.1"
structopt = "0.2"
tokio = "1.18"
rayon = "1.1"

[profile.release]
lto = true
codegen-units = 1
